@@ -22,6 +22,8 @@ Release 0.20.3 - Unreleased
                (Benoit Sigoure via JD)
    HBASE-1960  Master should wait for DFS to come up when creating 
                hbase.version
+   HBASE-2054  memstore size 0 is >= than blocking -2.0g size
+   HBASE-2057  Cluster won't stop 
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
@@ -46,6 +48,10 @@ Release 0.20.3 - Unreleased
    HBASE-2052  Make hbase more 'live' when comes to noticing table creation, 
                splits, etc., for 0.20.3
    HBASE-2049  Cleanup HLog binary log output (Dave Latham via Stack)
+   HBASE-2060  Missing closing tag in mapreduce package info (Lars George via
+               Andrew Purtell)
+   HBASE-2028  Add HTable.incrementColumnValue support to shell (Lars George
+               via Andrew Purtell)
 
 Release 0.20.2 - November 18th, 2009
   INCOMPATIBLE CHANGES
